--- a/style.css
+++ b/style.css
@@ -64,6 +64,6 @@ section {
     width: 300px;
     height: 300px;
     background: transparent;
-    border: 10px red solid;
-    left: 1208px;
+    border:10px red solid;
+    left: 64.3vw;
 }
