--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ section {
     width: 300px;
     height: 300px;
     background: transparent;
-    border:10px red solid;
-    left: 64.3vw;
+    border: 5px red solid;
+}
+
+#homeninja {
+    display: flex;
 }
