--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul li a {
     text-decoration: none;
 }
 
-section {
+#section1 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
