--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ ul li a {
     font-size: 50px;
     text-transform: uppercase;
     font-weight: bolder;
-    margin-bottom: 300px;
-    margin-right: 670px;
+    margin-bottom: 30vh;
+    margin-right: 36vw;
 }
 
 #ninja-text {
