--- a/Schoolwork/Button/button.css
+++ b/Schoolwork/Button/button.css
@@ -49,20 +49,34 @@ section {
 
 }
 
-div {
-    width: 50%;
-    aspect-ratio: 1.5;
-    background: rgb(107, 143, 156);
+#button-box {
+    width: 70%;
+    height: 70vh;
+    background: rgb(38, 55, 61);
 }
 
 h3 {
+    width: 100%;
+    text-align: center;
     color: white;
     font-size: 50px;
+    margin-top: 5vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
+    width: 100%;
+    text-align: center;
     color: white;
     font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5vh;
 }
 
 button {
