--- a/Schoolwork/schoolwork.css
+++ b/Schoolwork/schoolwork.css
@@ -44,26 +44,34 @@ ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 5vh;
+    margin-top: 10vh;
 }
 
 #works div {
-    height: 50vh;
+    height: 100%;
     width: 70%;
     background: rgb(38, 55, 61);
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 2vh 0;
+}
+
+#works div div {
+    width: 18vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    height: 4vw;
 }
 
 #button {
-    background: rgb(129, 164, 177);
-    padding: 4vh 6vw;
-    height: 0;
+    width: 15vw;
+    background: white;
     border-radius: 10px;
     display: flex; 
     align-items: center;
-    margin-top: 2vh;
-    color: white;
+    justify-content: center;
+    color: rgb(38, 55, 61);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
