--- a/Schoolwork/Jokes/jokes.css
+++ b/Schoolwork/Jokes/jokes.css
@@ -28,7 +28,7 @@ img {
 }
 
 button {
-    margin: 0px 45%;
+    margin: 0px 45px;
     width: 150px;
     height: 50px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
