--- a/About/about.css
+++ b/About/about.css
@@ -7,7 +7,7 @@ body {
     background: rgb(217, 244, 255);
 }
 
-ul {
+#navbar {
     display: flex;
     width: 100%;
     height: 75px;
@@ -21,7 +21,7 @@ ul {
     height: 40px;
 }
 
-ul li {
+#navbar li {
     margin: 0 15px 0 15px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
@@ -31,13 +31,63 @@ ul li {
     transition: all 0.25s ease-in-out;
 }
 
-ul #headeritem:hover {
+#navbar #headeritem:hover {
     box-shadow: 0px 8px white;
 }
 
-ul li a {
+#navbar li a {
     color: white;
     text-decoration: none;
+}
+
+#menu-open {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#menu-open div {
+    background-color: white;
+    width: 40px;
+    height: 6px;
+}
+
+#menu-open:hover {
+    cursor: pointer;
+}
+
+#menu {
+    background-color: rgb(26, 38, 43);
+    width: 300px;
+    height: 500px;
+    position: absolute;
+    right: 0; 
+    list-style: none;
+    padding-left: 20px;
+    display: none;
+}
+
+#menu-item {
+    margin: 30px 0px;
+    transition: all 0.25s ease-in-out;
+    width: fit-content;
+}
+
+#menu-item a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+#menu #menu-item:hover {
+    box-shadow: 0px 8px white;
 }
 
 section {
@@ -48,11 +98,11 @@ section {
 }
 
 #about-me {
-    width: 1200px;
+    width: 80vw;
     height: fit-content;
     background-color: rgb(38, 55, 61);
-    padding: 15px 25px;
-    margin-top: 20px;
+    padding: 25px 25px;
+    margin: 20px 0px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -74,3 +124,9 @@ section {
     line-height: 50px;
 }
 
+@media screen and (max-width: 1000px) {
+    #about-me-text {
+        font-size: 15px;
+        line-height: 30px;
+    }
+}
