--- a/About/about.css
+++ b/About/about.css
@@ -5,6 +5,7 @@
 
 body {
     background: rgb(217, 244, 255);
+    overflow-x: hidden;
 }
 
 #navbar {
@@ -40,6 +41,10 @@ body {
     text-decoration: none;
 }
 
+header {
+    transition: all 0.25s ease-in-out;
+}
+
 #menu-open {
     width: 40px;
     height: 40px;
@@ -69,7 +74,16 @@ body {
     right: 0; 
     list-style: none;
     padding-left: 20px;
-    display: none;
+    transition: all 0.25s ease-in-out;
+}
+
+#menu.hidden {
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+#menu.visible {
+    transform: translateX(0);
 }
 
 #menu-item {
