--- a/Schoolwork/Button/button.css
+++ b/Schoolwork/Button/button.css
@@ -5,9 +5,10 @@
 
 body {
     background: rgb(217, 244, 255);
+    overflow-x: hidden;
 }
 
-ul {
+#navbar {
     display: flex;
     width: 100%;
     height: 75px;
@@ -21,7 +22,7 @@ ul {
     height: 40px;
 }
 
-ul li {
+#navbar li {
     margin: 0 15px 0 15px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
@@ -31,13 +32,87 @@ ul li {
     transition: all 0.25s ease-in-out;
 }
 
-ul #headeritem:hover {
+#navbar #headeritem:hover {
     box-shadow: 0px 8px white;
 }
 
-ul li a {
+#navbar li a {
     color: white;
     text-decoration: none;
+}
+
+header {
+    transition: all 0.25s ease-in-out;
+}
+
+#menu-open {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    display: none;
+}
+
+#menu-open div {
+    background-color: white;
+    width: 40px;
+    height: 6px;
+}
+
+#menu-open:hover {
+    cursor: pointer;
+}
+
+#menu {
+    background-color: rgb(26, 38, 43);
+    width: 300px;
+    height: 500px;
+    position: absolute;
+    right: 0; 
+    list-style: none;
+    padding-left: 20px;
+    transition: all 0.25s ease-in-out;
+}
+
+#menu.hidden {
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+#menu.visible {
+    transform: translateX(0);
+}
+
+#menu-item {
+    margin: 30px 0px;
+    transition: all 0.25s ease-in-out;
+    width: fit-content;
+}
+
+#menu-item a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+#menu #menu-item:hover {
+    box-shadow: 0px 8px white;
+}
+
+@media screen and (max-width: 800px) {
+    #menu-open {
+        display: flex;
+    }
+
+    #headeritem {
+        display: none;
+    }
 }
 
 section {
@@ -85,5 +160,5 @@ button {
     aspect-ratio: 1;
     border-radius: 20px;
     background: rgb(255, 255, 255);
-    font-size: 100px;
+    font-size: 10vw;
 }
