--- a/Schoolwork/schoolwork.css
+++ b/Schoolwork/schoolwork.css
@@ -4,15 +4,40 @@
 }
 
 body {
-    background: rgb(217, 244, 255);
+    background: rgb(0, 0, 0);
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background-color: transparent;
+}
+
+#background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    overflow: hidden;
+    opacity: 0.8;
+}
+
+#navbar-shadow {
+    position: fixed;
+    box-shadow: 0px 0px 30px 25px black;
+    width: 150%;
+}
+
 #navbar {
+    position: fixed;
     display: flex;
     width: 100%;
     height: 75px;
-    background: rgb(38, 55, 61);
     align-items: center;
     justify-content: left;
 }
@@ -20,6 +45,7 @@ body {
 #logo-img {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
 }
 
 #navbar li {
@@ -67,18 +93,6 @@ header {
     cursor: pointer;
 }
 
-#menu-open {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    right: 0;
-    margin-right: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    display: none;
-}
-
 #menu-open div {
     background-color: white;
     width: 40px;
@@ -90,15 +104,17 @@ header {
 }
 
 #menu {
-    background-color: rgb(26, 38, 43);
+    background-color: rgb(0, 0, 0, 80%);
     width: 300px;
     height: 500px;
-    position: absolute;
+    position: fixed;
     right: 0; 
     list-style: none;
     padding-left: 20px;
     transition: all 0.25s ease-in-out;
     z-index: 100;
+    border-radius: 20px 0px 0px 20px;
+    margin-top: 75px;
 }
 
 #menu.hidden {
@@ -143,57 +159,39 @@ header {
     height: 40px;
 }
 
-ul li {
-    margin: 0 15px 0 15px;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    color: white;
-    list-style-type: none;
-    transition: all 0.25s ease-in-out;
-}
-
-ul #headeritem:hover {
-    box-shadow: 0px 8px white;
-}
-
-ul li a {
-    color: white;
-    text-decoration: none;
-}
-
 #works {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10vh;
 }
 
 #works div {
     height: 100%;
     width: 70%;
-    background: rgb(38, 55, 61);
+    background: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 2vh 0;
+    margin-top: 15vh;
 }
 
 #works div div {
-    width: 18vw;
+    width: 300px;
     margin-top: 1vh;
     margin-bottom: 1vh;
-    height: 4vw;
+    height: 75px;
+    background-color: rgb(37, 37, 37, 0%);
 }
 
 #button {
-    width: 15vw;
+    width: 200px;
     background: white;
     border-radius: 10px;
     display: flex; 
     align-items: center;
     justify-content: center;
-    color: rgb(38, 55, 61);
+    color: rgb(37, 37, 37);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
@@ -202,4 +200,15 @@ ul li a {
 
 #button:hover {
     border: 2px white solid;
+}
+
+@media screen and (min-width: 1000px) {
+    #menu.visible {
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    #menu.hidden {
+        transform: translateX(100%);
+    }
 }
