--- a/style.css
+++ b/style.css
@@ -4,15 +4,40 @@
 }
 
 body {
-    background: rgb(217, 244, 255);
+    background: rgb(0, 0, 0);
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background-color: transparent;
+}
+
+#background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    overflow: hidden;
+    opacity: 0.8;
+}
+
+#navbar-shadow {
+    position: fixed;
+    box-shadow: 0px 0px 30px 25px black;
+    width: 150%;
+}
+
 #navbar {
+    position: fixed;
     display: flex;
     width: 100%;
     height: 75px;
-    background: rgb(38, 55, 61);
     align-items: center;
     justify-content: left;
 }
@@ -20,6 +45,7 @@ body {
 #logo-img {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
 }
 
 #navbar li {
@@ -67,18 +93,6 @@ header {
     cursor: pointer;
 }
 
-#menu-open {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    right: 0;
-    margin-right: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    display: none;
-}
-
 #menu-open div {
     background-color: white;
     width: 40px;
@@ -90,15 +104,17 @@ header {
 }
 
 #menu {
-    background-color: rgb(26, 38, 43);
+    background-color: rgb(0, 0, 0, 80%);
     width: 300px;
     height: 500px;
-    position: absolute;
+    position: fixed;
     right: 0; 
     list-style: none;
     padding-left: 20px;
     transition: all 0.25s ease-in-out;
     z-index: 100;
+    border-radius: 20px 0px 0px 20px;
+    margin-top: 75px;
 }
 
 #menu.hidden {
@@ -138,16 +154,15 @@ header {
     }
 }
 
-#section1 {
+section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 25vh;
 }
 
 #ninja-title {
     width: 500px;
-    color: rgb(38, 55, 61);
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     text-transform: uppercase;
@@ -155,13 +170,14 @@ header {
 }
 
 #ninja-box {
-    width: fit-content;
+    margin-top: 25vh;
+    width: 50%;
     height: 100%;
 }
 
 #ninja-text {
-    width: 500px;
-    color: rgb(38, 55, 61);     
+    width: 100%;
+    color: rgb(255, 255, 255);     
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-transform: uppercase;
@@ -169,50 +185,48 @@ header {
 }
 
 #ninja {
-    width: 300px;
-    height: 300px;
-    border: 5px rgb(255, 255, 255) dashed;
-    box-shadow: 0px 0px 50px rgb(255, 255, 255);
-}
-
-#ninjacircle {
-    position: absolute;
-    border-radius: 100%;
-    width: 300px;
-    height: 300px;
-    background: transparent;
-    border: 5px red solid;
+    margin-top: 25vh;
+    width: 20vw;
+    height: 20vw;
+    border-radius: 50%;
+    box-shadow: 0px 0px 20px 10px rgb(255, 255, 255);
 }
 
 #homeninja {
     display: flex;
 }
 
+@media screen and (min-width: 1000px) {
+    #menu.visible {
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    #menu.hidden {
+        transform: translateX(100%);
+    }
+}
+
 @media screen and (max-width: 1000px) {
     #section1 {
         flex-wrap: wrap;
-        margin-top: 5vh;
         justify-content: center;
     }
 
     #ninja-box {
-        margin-bottom: 2vh;
+        width: 75%;
+        margin-top: 100px;
         text-align: center;
     }
 
     #ninja-title {
         text-align: center;
+        width: 100%;
     }
 
     #ninja {
-        width: 460px;
-        height: 460px;
-        margin: 0px 20px;
-    }
-
-    #ninjacircle {
-        width: 460px;
-        height: 460px;
-        margin: 0px 20px;
+        width: 60vw;
+        height: 60vw;
+        margin-top: 75px;
     }
 }
