--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -58,13 +58,32 @@ body {
     transition: all 0.25s ease-in-out;
 }
 
-#navbar #headeritem:hover {
-    box-shadow: 0px 8px white;
-}
-
 #navbar li a {
     color: white;
     text-decoration: none;
+    position: relative;
+}
+
+#navbar #headeritem a:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    height: 0.8em;
+    width: 100%;
+    border-bottom: 2px solid;
+    margin-top: 10px;
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0,1);
+	transform: scale(0,1);
+}
+
+#navbar #headeritem a:hover:after {
+    opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
 }
 
 header {
