--- a/About/about.css
+++ b/About/about.css
@@ -207,6 +207,38 @@ section {
     line-height: 50px;
 }
 
+.amongus {
+    width: 50px;
+    position: absolute;
+}
+
+#amongus1 {
+    left: 0;
+    rotate: 90deg;
+    top: 30%;
+}
+
+#amongus2 {
+    left: 55%;
+    bottom: -82%;
+}
+
+#amongus3 {
+    left: 60%;
+    top: -5px;
+    rotate: 180deg;
+}
+
+#amongus4 {
+    right: 0;
+    top: 110%;
+    rotate: -90deg;
+}
+
+.amongus:hover {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 1000px) {
     #menu.visible {
         transform: translateX(100%);
