--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -5,8 +5,13 @@
 }
 
 body {
+    position: absolute;
     background: rgb(0, 0, 0);
     overflow-x: hidden;
+    overflow-y: hidden;
+    height: 100%;
+    width: 100%;
+    box-shadow: inset 0 0 200px 100px #000000;
 }
 
 ::-webkit-scrollbar {
@@ -159,6 +164,7 @@ header {
 .amongus {
     width: 50px;
     position: absolute;
+    transition: all ease-in-out 0.1s;
 }
 
 #amongus1 {
@@ -184,10 +190,15 @@ header {
     rotate: -90deg;
 }
 
+.amongus:hover {
+    width: 55px;
+}
+
 #cursor {
     width: 30px;
     position: absolute;
     pointer-events: none;
+    z-index: 100;
 }
 
 @media screen and (min-width: 1000px) {
